Initial Model and Repositories
Added Model
Added Repositories
Added postgre connection

--- a/TrainingMonitorBackend/TrainingMonitor.API/TrainingMonitor.API.csproj
+++ b/TrainingMonitorBackend/TrainingMonitor.API/TrainingMonitor.API.csproj
@@ -16,4 +16,9 @@
     <Folder Include="Dto\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TrainingMonitor.Domain\TrainingMonitor.Domain.csproj" />
+    <ProjectReference Include="..\TrainingMonitor.Persistence\TrainingMonitor.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
