--- a/TrainingMonitorBackend/TrainingMonitor.Persistence/TrainingMonitor.Persistence.csproj
+++ b/TrainingMonitorBackend/TrainingMonitor.Persistence/TrainingMonitor.Persistence.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Repositories\Base\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +18,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.33" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.29" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TrainingMonitor.Domain\TrainingMonitor.Domain.csproj" />
   </ItemGroup>
 
 </Project>
