Implemented registration and login

--- a/TrainingMonitorBackend/TrainingMonitor.API/appsettings.json
+++ b/TrainingMonitorBackend/TrainingMonitor.API/appsettings.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "connectionString": "Host=localhost;Database=TrainingMonitor;Username=postgres;Password=root"
   },
+  "Token": {
+    "Issuer": "https://localhost:7249",
+    "Key": "secretkeythiskeyshouldneverleavetheserver"
+  },
   "AllowedHosts": "*"
 }
