--- a/TrainingMonitorBackend/TrainingMonitor.Domain/TrainingMonitor.Domain.csproj
+++ b/TrainingMonitorBackend/TrainingMonitor.Domain/TrainingMonitor.Domain.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Services\Implementation\" />
-    <Folder Include="Services\Interface\" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.36.0" />
   </ItemGroup>
 
 </Project>
